devops/k8s/exposure.yaml
apiVersion: v1
kind: Service
metadata:
  name: campconnect-backend-nodeport
  namespace: campconnect
  labels:
    app: campconnect-backend
    exposure: nodeport
spec:
  type: NodePort
  selector:
    app: campconnect-backend
  ports:
    - name: http
      port: 8082
      targetPort: http
      nodePort: 30082
---
apiVersion: v1
kind: Service
metadata:
  name: campconnect-backend-local
  namespace: campconnect
  labels:
    app: campconnect-backend
    exposure: docker-desktop-local
spec:
  type: LoadBalancer
  selector:
    app: campconnect-backend
  ports:
    - name: http
      port: 8082
      targetPort: http
