devops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campconnect
  namespace: campconnect
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
spec:
  ingressClassName: nginx
  rules:
    - host: campconnect.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: campconnect-backend
                port:
                  number: 8082
          - path: /
            pathType: Prefix
            backend:
              service:
                name: campconnect-frontend
                port:
                  number: 80
